--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
   <!-- Stylesheet -->
   <link href="css/creative.min.css" rel="stylesheet">
 
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-38957746-4"></script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-8DTFKYGWEN"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){window.dataLayer.push(arguments);}
+    function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'UA-38957746-4');
+    gtag('config', 'G-8DTFKYGWEN');
   </script>
 
   <!-- Javascript detection -->
