--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   <!-- Notice -->
     <div class="header-content">
       <div class="header-content-inner">
-        <h1 id="homeHeading">Melbourne&#8217;s Custom<span class="avoid-wrap">Picture Framers</span></h1>
+        <h1 id="homeHeading">Melbourne&#8217;s Custom Picture Framers</h1>
         <p>We are Melbourne&#8217;s specialist framers serving the community for over 30 years.</p>
         <p>Offering a comprehensive variety of frames and professional consultation for any framing project, including prints, photos, canvas, memorabilia items, and more.</p>
         <p>Visit us for a professional consultation on how to best frame and protect your work.</p>
